--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/kirillanisimov/contact-keeper.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Kirill Anisimov",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/kirillanisimov/contact-keeper/issues"
